--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
         "@xmader/async-event-emitter": "^1.0.1"
     },
     "devDependencies": {
+        "@types/node": "^10.14.22",
+        "rimraf": "^3.0.0",
         "typescript": "^3.6.2"
     },
     "scripts": {
+        "clean": "rimraf dist",
         "build": "tsc",
         "watch": "tsc --watch"
     },
