--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
     "name": "aria-ng-gui-plugins-core",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "main": "dist/main.js",
     "module": "src/main.ts",
     "dependencies": {
-        "@xmader/async-event-emitter": "^1.0.1"
+        "@xmader/async-event-emitter": "^1.0.1",
+        "os-browserify": "^0.3.0",
+        "path-browserify": "^1.0.0"
     },
     "devDependencies": {
+        "@types/cordova-plugin-file": "^4.3.2",
         "@types/node": "^10.14.22",
         "rimraf": "^3.0.0",
         "typescript": "^3.6.2"
